WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127977
Some fixed position elements disappear in WK2 on iOS
https://bugs.webkit.org/show_bug.cgi?id=127977
Summary
Some fixed position elements disappear in WK2 on iOS
Simon Fraser (smfr)
Reported
2014-01-30 18:11:46 PST
Some fixed position elements disappear in WK2 on iOS
Attachments
Patch
(2.01 KB, patch)
2014-01-30 18:12 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.57 KB, patch)
2014-01-30 18:35 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-01-30 18:12:51 PST
Created
attachment 222775
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-01-30 18:13:15 PST
Comment on
attachment 222775
[details]
Patch Tim said yes.
Simon Fraser (smfr)
Comment 3
2014-01-30 18:28:56 PST
Comment on
attachment 222775
[details]
Patch Going to revise this.
Simon Fraser (smfr)
Comment 4
2014-01-30 18:35:10 PST
Created
attachment 222778
[details]
Patch
Simon Fraser (smfr)
Comment 5
2014-01-30 21:38:14 PST
https://trac.webkit.org/r163157
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug